test/verilog/test_results/test_report.txt
Verilog Test Report - 2025-09-27 11:53:52
============================================================

Total tests: 54
Passed: 39
Failed: 15
Success rate: 72.2%

counter:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

decoder:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

dflipflop_masterslave:
  iverilog: FAIL
    Error: /workspace/test/verilog/dflipflop_masterslave.v:38: error: Unable to bind wire/reg/memory `ic_dlatch_ic_node_14_0' in `dflipflop_masterslave_tb.dut'
/workspace/test/verilog/dflipflop_masterslave.v:38:...
  verilator: FAIL
    Error: %Error: /workspace/test/verilog/dflipflop_masterslave.v:38:32: Can't find definition of variable: 'ic_dlatch_ic_node_14_0'
   38 |     assign output_led1_q_0_1 = ic_dlatch_ic_node_14_0;  
      |     ...
  yosys: PASS

dflipflop:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

dflipflop2:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

display_3bits_counter:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/display_3bits_counter.v:34:10: Signal is not driven, nor used: 'ic_display_3bits_ic_node_15_0'
                                                                ...
  yosys: PASS

display_3bits:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

display_4bits_counter:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/display_4bits_counter.v:34:10: Signal is not driven, nor used: 'ic_jkflipflop_ic_node_19_0'
                                                                   ...
  yosys: PASS

display_4bits:
  iverilog: PASS
  verilator: PASS
  yosys: PASS

dlatch:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNOPTFLAT: /workspace/test/verilog/dlatch.v:29:10: Signal unoptimizable: Feedback to clock or circular logic: 'dlatch.nand_7'
   29 |     wire nand_7;
      |          ^~~~~~
                ...
  yosys: PASS

ic:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/ic.v:54:10: Signal is not driven, nor used: 'ic_jkflipflop_ic_node_39_0'
                                                   : ... In instance ic
   54 |     wi...
  yosys: PASS

input:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-DECLFILENAME: /workspace/test/verilog/input.v:16:8: Filename 'input' does not match MODULE name: 'wiredpanda_module'
   16 | module wiredpanda_module (
      |        ^~~~~~~~~~~~~~~~~
      ...
  yosys: PASS

jkflipflop:
  iverilog: FAIL
    Error: /workspace/test/verilog/jkflipflop.v:34: error: Unable to bind wire/reg/memory `ic_dflipflop_ic_node_34_0' in `jkflipflop_tb.dut'
/workspace/test/verilog/jkflipflop.v:34: error: Unable to elaborate r-...
  verilator: FAIL
    Error: %Error: /workspace/test/verilog/jkflipflop.v:34:32: Can't find definition of variable: 'ic_dflipflop_ic_node_34_0'
   34 |     assign output_led1_q_0_1 = ic_dflipflop_ic_node_34_0;  
      |          ...
  yosys: PASS

notes:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/notes.v:34:10: Signal is not driven, nor used: 'ic_jkflipflop_ic_node_19_0'
                                                      : ... In instance notes
   34...
  yosys: PASS

register:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/register.v:30:9: Signal is not used: 'd_flip_flop_7_1_q'
                                                        : ... In instance register
   30 |     reg d_f...
  yosys: PASS

sequential:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNUSED: /workspace/test/verilog/sequential.v:31:10: Signal is not driven, nor used: 'ic_serialize_ic_node_18_0'
                                                           : ... In instance se...
  yosys: PASS

serialize:
  iverilog: PASS
  verilator: FAIL
    Error: %Warning-UNDRIVEN: /workspace/test/verilog/serialize.v:27:10: Signal is not driven: 'node_5'
                                                            : ... In instance serialize
   27 |     wire no...
  yosys: PASS

tflipflop:
  iverilog: FAIL
    Error: /workspace/test/verilog/tflipflop.v:34: error: Unable to bind wire/reg/memory `ic_dflipflop_ic_node_34_0' in `tflipflop_tb.dut'
/workspace/test/verilog/tflipflop.v:34: error: Unable to elaborate r-val...
  verilator: FAIL
    Error: %Error: /workspace/test/verilog/tflipflop.v:34:32: Can't find definition of variable: 'ic_dflipflop_ic_node_34_0'
   34 |     assign output_led1_q_0_1 = ic_dflipflop_ic_node_34_0;  
      |           ...
  yosys: PASS

